--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "laravel-doctrine/orm": "^3.1",
         "laravel/framework": "^11.31",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "php-http/discovery": "^1.20",
+        "psr/http-factory-implementation": "*",
+        "symfony/psr-http-message-bridge": "^7.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
